--- a/mijnstijl.css
+++ b/mijnstijl.css
@@ -1,70 +1,70 @@
 header {
  background-color: aquamarine;
  width: 1924 px;
- height: 200 px;   
+ height: 200 px   
 }
 
 #T1 {
-background-color: red;
+background-color: red
 }
 
 #T2 {
-    background-color:aqua;
+    background-color:aqua
     }
 
 #T3 {
- background-color:blue;
+ background-color:blue
  }
 
 #T4 {
-   background-color: yellowgreen;
+   background-color: yellowgreen
 }
 
 #T5 {
-    background-color: brown;
+    background-color: brown
 }
 
 #T6 {
-    background-color:blueviolet;
+    background-color:blueviolet
     }
 
 #T7 {
-    background-color: chocolate;
+    background-color: chocolate
 }
 
 #T8 {
-    background-color: yellow;
+    background-color: yellow
 }
 
 #T9 {
-   background-color: cadetblue;
+   background-color: cadetblue
 }
 
 #T10 {
-    background-color: darkcyan;
+    background-color: darkcyan
 }
 
 #T11 {
-   background-color: chartreuse;
+   background-color: chartreuse
 }
 #T12 {
-    background-color: deeppink;
+    background-color: deeppink
 }
 
 #T13 {
-   background-color: orange;
+   background-color: orange
 }
 
 #T14 {
-    background-color: grey;
+    background-color: grey
 }
 
 #T15 {
-    background-color: white;
+    background-color: white
 }
 
 #T16 {
-    background-color: black;
+    background-color: black
 }
 
 footer {
